--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # TimeWeb App Configuration
 NODE_ENV=production
 PORT=3000
-APP_URL=https://sergeynikishin555123123-lab-tg-inspirationn-bot-b16f.twc1.net
+APP_URL=https://apilsen-m-0cdf.twc1.net
 
 # Telegram Bot
 BOT_TOKEN=7964914127:AAEpscgpERmSV_J5v2I4XGvEUPEu09fMZ-o
