--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "restart": "pkill -f \"node server.js\" || true && sleep 2 && node server.js",
-    "force-restart": "fuser -k 3000/tcp || true && sleep 2 && node server.js",
+    "start": "node --max-old-space-size=4096 server.js",
+    "dev": "nodemon --max-old-space-size=4096 server.js",
+    "start:prod": "NODE_ENV=production node --max-old-space-size=8192 server.js",
+    "start:memory": "node --max-old-space-size=8192 --max-semi-space-size=1024 server.js",
+    "restart": "pkill -f \"node server.js\" || true && sleep 2 && node --max-old-space-size=4096 server.js",
+    "force-restart": "fuser -k 3000/tcp || true && sleep 2 && node --max-old-space-size=4096 server.js",
     "status": "ps aux | grep \"node server.js\" || echo \"Сервер не запущен\"",
     "test": "echo \"No tests specified\" && exit 0",
-    "deploy": "node server.js",
-    "db:init": "node -e \"import('./server.js').then(() => console.log('Database initialized'))\""
+    "deploy": "node --max-old-space-size=8192 server.js",
+    "db:init": "node -e \"import('./server.js').then(() => console.log('Database initialized'))\"",
+    "memory:test": "node --max-old-space-size=8192 --trace-gc server.js",
+    "monitor": "node --max-old-space-size=4096 --inspect server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -25,7 +29,8 @@
     "sharp": "^0.32.6",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
