--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tg-inspiration-bot",
-  "version": "12.0.0",
-  "description": "Telegram bot with Mini App for inspiration workshop - Pure JavaScript Version",
+  "version": "13.0.0",
+  "description": "Telegram bot with Mini App for inspiration workshop - Secure JavaScript Version",
   "type": "module",
   "main": "server.js",
   "scripts": {
@@ -19,21 +19,21 @@
     "monitor": "node --max-old-space-size=4096 --inspect server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.64.0",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
+    "body-parser": "^2.0.1",
+    "dotenv": "^16.4.5",
+    "uuid": "^10.0.0",
+    "multer": "^2.0.0",
+    "sharp": "^0.33.4",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
+    "sqlite3": "^5.1.7",
     "compression": "^1.7.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.4"
   },
   "keywords": [
     "telegram",
